fix(ToolHeader): add gap spacing to header layout

--- a/src/components/molecules/ToolHeader/ToolHeader.scss
+++ b/src/components/molecules/ToolHeader/ToolHeader.scss
@@ -7,6 +7,7 @@ $block: '.#{variables.$ns}tool-header';
     justify-content: space-between;
     align-items: center;
     height: 24px;
+    gap: var(--g-spacing-2);
 
     &__left {
         display: flex;
